--- a/OeuvresJDBC/public_html/partials/connect.html
+++ b/OeuvresJDBC/public_html/partials/connect.html
@@ -1,3 +1,4 @@
+<h1 class="text-center">Authentification</h1>
 <div class="well">
     <form class="form-signin form-horizontal" role="form">
         <div class="form-group">
