--- a/OeuvresJDBC/public_html/partials/home.html
+++ b/OeuvresJDBC/public_html/partials/home.html
@@ -1,3 +1,3 @@
-<section class="home">
-    <h2>Gestion des oeuvres</h2>
+<section class="home text-center">
+    <h1>Gestion des oeuvres</h1>
 </section>
