--- a/OeuvresJDBC/public_html/partials/oeuvre.html
+++ b/OeuvresJDBC/public_html/partials/oeuvre.html
@@ -22,7 +22,7 @@
             <label class="col-sm-3 control-label">Propriétaire</label>
             <div class="col-sm-6 col-md-3">
                 <select class='form-control' name='proprietaires' required
-                        ng-options="option.nom_proprietaire for option in oeuvreCtrl.proprietaire track by option.id_proprietaire"
+                        ng-options="option.nom_proprietaire for option in oeuvreCtrl.proprietaires track by option.id_proprietaire"
                         ng-model="oeuvreCtrl.selectedOptionProprio">
                     <option value=''>Sélectionnez un propriétaire</option>
                 </select>
@@ -32,7 +32,7 @@
         <div class="form-group">
             <div class="col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
                 <button type="submit" class="btn btn-default btn-primary" 
-                        ng-click="oeuvreCtrl.validateOeuvre(oeuvreCtrl.oeuvre.oeuvre_id, oeuvreForm)">
+                        ng-click="oeuvreCtrl.validateOeuvre(oeuvreCtrl.oeuvre.id_oeuvre, oeuvreForm)">
                     <span class="glyphicon glyphicon-ok"></span>
                     Valider              
                 </button>
