--- a/OeuvresJDBC/public_html/partials/oeuvre.html
+++ b/OeuvresJDBC/public_html/partials/oeuvre.html
@@ -7,7 +7,7 @@
         <div class="form-group">
             <label class="col-sm-3 control-label">Titre</label>
             <div class="col-sm-6  col-md-5">
-                <input type="text" name="name" ng-model="oeuvreCtrl.oeuvre.titre" 
+                <input type="text" name="titre" ng-model="oeuvreCtrl.oeuvre.titre" 
                        class="form-control" placeholder="Titre de l'oeuvre" required autofocus>
             </div>
         </div>
